# ppx-effects

./: README.md  dune-project  ppx_effects.opam
src/: dune  import.ml  ppx_effects.ml  ppx_effects_runtime.ml
test/: gen_dune_rules.ml
test/errors/: continue_without_value_case.expected  continue_without_value_case.ml  dangling.expected  discontinue_without_value_case.expected  discontinue_without_value_case.ml  double_when_guard.ml  dune.inc  invalid_payload_type_in_continue.expected  invalid_payload_type_in_continue.ml  invalid_payload_type_in_discontinue.expected  invalid_payload_type_in_discontinue.ml  invalid_payload_type_in_match.expected  invalid_payload_type_in_match.ml  invalid_payload_type_in_try.ml  invalid_scrutinee_in_discontinue.expected  invalid_scrutinee_in_discontinue.ml  malformed_payload.expected  malformed_payload.ml  malformed_payload_hint_missing_comma.expected  malformed_payload_hint_missing_comma.ml  match_without_value_case.ml  rebind.expected  when_inside_effect.expected  when_inside_effect.ml
test/passing/: dune.inc  exhaustive_handlers.expected  exhaustive_handlers.ml  let_effect.expected  let_effect.ml  main.expected  main.ml  rebind.expected  rebind.ml  scrutinee.expected  scrutinee.ml  shadowed_raise.expected  shadowed_raise.ml  shallow.expected  shallow.ml  when_guards.expected  when_guards.ml
